Fix header being unreadable due to light colors

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,42 +1,29 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  line-height: 1.1;
+  background-color: #2f2f2f;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.navbar h1 {
+  font-size: 1.6rem;
+
+  padding-left: 0.1rem;
+  padding-right: 0.5rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.navbar img {
+  width: 48px;
+  height: 5%;
+  margin-left: 0.5rem;
+  transform: scaleX(-1);
+}
+
+@media (prefers-color-scheme: light) {
+  .navbar {
+    background-color: aliceblue;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
